# Steam_showcase-Gen

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
demo/: demo_1.cpp  demo_2.cpp  demo_3.cpp  demo_4.cpp
include/: app_text.hpp  platform_utils.h  showcase_processor.h  ui_components.h
src/: main.cpp  platform_utils.cpp  showcase_processor.cpp  ui_components.cpp
